Explicitly set wait to 0

--- a/data/index.html
+++ b/data/index.html
@@ -1,5 +1,5 @@
 <head>
-  <meta http-equiv="refresh" content="URL=https://idr.github.io/ome-ngff-samples" />
+  <meta http-equiv="refresh" content="0; URL=https://idr.github.io/ome-ngff-samples" />
 </head>
 <body>
   <p>If you are not redirected, <a href="https://idr.github.io/ome-ngff-samples">click here</a>.</p>
