--- a/tools/index.html
+++ b/tools/index.html
@@ -1,5 +1,5 @@
 <head>
-  <meta http-equiv="refresh" content="URL=https://ome.github.io/ome-ngff-tools" />
+  <meta http-equiv="refresh" content="0; URL=https://ome.github.io/ome-ngff-tools" />
 </head>
 <body>
   <p>If you are not redirected, <a href="https://ome.github.io/ome-ngff-tools">click here</a>.</p>
